[workspace]
members = [
    "programs/*"
]
resolver = "2"

# `blake3` 1.8.3 requires edition2024 which the sbpf toolchain's cargo (1.84)
# can't parse. Patch the crate to v1.8.2 (edition2021) via GitHub so the source
# is considered different from crates.io and the patch applies successfully.
[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.8.2" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
